@@ -23,6 +23,7 @@
 2024-02-20T15:58:21.610Z |           1.12.1 | fix
 2024-02-20T16:02:24.572Z |           1.12.2 | fix
 2024-02-28T15:33:21.211Z |           1.12.3 | fix
-2024-03-14T18:11:58.214Z |           1.13.0 | React Hooks in index.js + relative next dates
+2024-03-14T18:11:58.214Z |           1.13.0 | React Hooks in index.js + relative dates func
 2024-03-15T11:19:11.878Z |           1.13.1 | fix
 2024-03-15T13:44:10.101Z |           1.13.2 | fix
+2024-03-17T20:39:20.603Z |           1.13.3 | fix
